[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/scene_compositor/ui/controls/SpinControl.gd" type="Script" id=1]
[ext_resource path="res://addons/scene_compositor/core/base/BaseControl.tscn" type="PackedScene" id=2]

[node name="SpinControl" instance=ExtResource( 2 )]
script = ExtResource( 1 )
value = 0.0
number/max_value = 100000.0
number/min_value = -100000.0
number/step = 0.1

[node name="Number" type="SpinBox" parent="." index="0"]
margin_right = 196.0
margin_bottom = 45.0
min_value = -100000.0
max_value = 100000.0
step = 0.1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="Number" to="." method="_on_Number_value_changed"]
